Bug 167859 - Creating or editing secondary x-axis in a chart crashes program.
Summary: Creating or editing secondary x-axis in a chart crashes program.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: highest critical
Assignee: Xisco Faulí
URL:
Whiteboard: target:25.8.0 target:26.2.0 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-08-08 05:44 UTC by Harry
Modified: 2025-08-23 00:28 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (17.84 KB, application/vnd.oasis.opendocument.spreadsheet)
2025-08-08 08:38 UTC, Xisco Faulí
Details
how it looks before the problematic commit (27.62 KB, image/png)
2025-08-11 11:41 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harry 2025-08-08 05:44:18 UTC
Description:
Creating a new or editing an existing secondary x-axis in a chart crashes LibreOffice Calc program immediately.

Steps to Reproduce:
1. Create or edit an existing secondary x-axis in a chart.
2. LibreOffice Calc crashes immediately.

Actual Results:
Create or edit an existing secondary x-axis in a chart.


Expected Results:
LibreOffice Calc crashes immediately.


Reproducible: Always


User Profile Reset: No

Additional Info:
LibreOffice Calc should not have crashed?
Comment 1 Xisco Faulí 2025-08-08 08:35:25 UTC
Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a0ae1b0cf2661e7be9ea042e5357530f5fb412f5
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 2 Xisco Faulí 2025-08-08 08:38:14 UTC
Created attachment 202238 [details]
sample file

Steps to reproduce:
1. Open attached document
2. Edit the chart
3. Double click on the x-axis on top

-> Crash
Comment 3 Xisco Faulí 2025-08-08 08:42:39 UTC
Regression introduced by:

commit f355ddcbf2bf037263e336724829b5467b94ef40	[log]
author	Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>	Sun Apr 13 11:36:05 2025 +0900
committer	Tomaž Vajngerl <quikee@gmail.com>	Mon Apr 14 02:48:06 2025 +0200
tree bc58c8a181d68d01054c5c99d6cbb2c7304102fa
parent 4575f033e58148ede7283ad2f3c4cd353e57022a [diff]

chart2: fold isSupported* functions into ChartType

Bisected with: linux64-25.8
Comment 4 Xisco Faulí 2025-08-08 08:58:49 UTC
fix in https://gerrit.libreoffice.org/c/core/+/189171
Comment 5 Commit Notification 2025-08-08 11:17:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/21ee74b4f38262561ec41897a1c4c5a3b1b14776

tdf#167859: check xChartType

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-08-08 13:39:38 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/791a89f0d8b7fb5e28135758f06fa3166aa5f600

Revert "tdf#167859: check xChartType"

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-08-08 14:27:51 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4862b5efbd6724d01e04b0951188f2a18c9362e8

tdf#167859: check xChartType

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-08-08 15:27:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/1a8ac560d1227ff4531172b998cbda8f1a8bbfa1

tdf#167859: check xChartType

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-08-08 15:28:15 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/ecf17e5bac521bc9088908d09c267dc861237f1d

tdf#167859: check xChartType

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-08-08 16:24:27 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/52057ff157498b311f334ff1479675cc0b0bdcf5

tdf#167859: sc: Add UItest

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Harry 2025-08-11 07:48:59 UTC
Tested the fix in 25.8.0.3 and dev-25.8.1.0.0 under Windows and now the positioning parameters are gone/missing. 

There should be "Axix LIne", "Position Axis" and "Labels", but there is only "Interval Marks" but without "Place marks".

That means, that you cannot edit or move an existing x-axis to another value. 

Fix is uncomplete and resolved only the crash issue and opened another problem that shouldn't be.
Comment 12 Xisco Faulí 2025-08-11 11:41:29 UTC
Created attachment 202277 [details]
how it looks before the problematic commit
Comment 13 Xisco Faulí 2025-08-11 12:30:02 UTC
Thanks for your quick feedback. it should be fixed in https://gerrit.libreoffice.org/c/core/+/189364
Comment 14 Commit Notification 2025-08-11 13:58:28 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/54a6abf4bd778b2308882ad8043fafa481ec4346

related tdf#167859: fix logic

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2025-08-12 11:19:18 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8-0":

https://git.libreoffice.org/core/commit/ce0d87fb8cd5c493f5c51b1dad3b003a0703ad3d

related tdf#167859: fix logic

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2025-08-12 11:19:21 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/9915e4469c8657592725432beae8638bb3f823f4

related tdf#167859: fix logic

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Harry 2025-08-13 08:16:28 UTC
Tested the fix with LibreOfficeDev_25.2.6.0.0_Win_x86-64 and LibreOfficeDev_25.8.1.0.0_Win_x86-64 and now everything is working just fine.

Thx for the quick fix.
Comment 18 Harry 2025-08-14 11:54:38 UTC
Tested the fix in 25.8.0.4, everthing works fine now.

Thx again for the quick fix.