tdf#167859: check xChartType

like other places do

after
commit f355ddcbf2bf037263e336724829b5467b94ef40
Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
Date:   Sun Apr 13 11:36:05 2025 +0900

    chart2: fold isSupported* functions into ChartType

Change-Id: I908d41ccc88208ab57576bd6369590556aafcce5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/189173
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>